fix some layouts

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="overlay">
             <div class="content" >
                 <h1 class="wow zoomIn">Welcome to <strong><span class="color">Thuc-Nhi Le </span></strong>Personal Website!</h1>
-                <p class="wow zoomIn" class="lead"  >Hope you have a good time exploring my website!</p>
+                <h3 class="wow zoomIn" class="lead"  >Hope you have a good time exploring my website!</h3>
                 <button href="#"   class="resume wow zoomIn" >My One-page Resume</button>
                 <h4><a href="#tf-about" class="fa fa-angle-down page-scroll wow swing"></a></h4>
             </div>
@@ -230,7 +230,7 @@
                 <div class="col-md-4">
                     <i class="fa fa-users"></i>
                     <h4 class = "wow flipInX"><strong>Leader</strong></h4>
-                    <p class = "wow slideInUp"><strong>Co-Founder and Co-President</strong> <br/> Elite Navigation and Preparation Organization (ENPO), Vietnam<br/>
+                    <p style="text-align:left" class = "wow slideInUp"><strong>Co-Founder and Co-President</strong> <br/> Elite Navigation and Preparation Organization (ENPO), Vietnam<br/>
         <strong>Monitor</strong><br/>Class 10D1, 11D1, 12D1, Le Quy Don High School for the Gifted</br>
         <strong>Vice President and Pianist</strong><br/>Music Club of Le Quy Don High School for the Gifted</br>
         <strong>Head of Organizing Team</strong><br/>ENPO Study-Abroad Conference 2014, 2015<br/>
@@ -240,7 +240,7 @@
                 <div class="col-md-4">
                     <i class="fa fa-book"></i>
                     <h4 class = "wow flipInX"><strong>Teacher/Mentor</strong></h4>
-                    <p class = "wow slideInUp"><strong>Teaching Assistant</strong><br/>Help to teach the piano to primary school students<br/>
+                    <p style="text-align:left" class = "wow slideInUp"><strong>Teaching Assistant</strong><br/>Help to teach the piano to primary school students<br/>
         <strong>Mentor"</strong><br/>I love honesty” of Live and Learn<br/>
         <strong>Mentor"</strong><br/>Prepare band-7 IELTS skills for a 11-grade student<br/>
         <strong>Mentor"</strong><br/>Give college application advice to a 12-grade student</p>
@@ -249,7 +249,7 @@
                 <div class="col-md-4">
                     <i class="fa fa-comment"></i>
                     <h4 class = "wow flipInX"><strong>Public Speaker</strong></h4>
-                    <p class = "wow slideInUp"><strong>Guest Speaker</strong><br/>Talk about College Application Process in VietAbroader Study Abroad Conference 2016<br/>
+                    <p style="text-align:left" class = "wow slideInUp"><strong>Guest Speaker</strong><br/>Talk about College Application Process in VietAbroader Study Abroad Conference 2016<br/>
         <strong>Guest Speaker</strong><br/>Talk about Studying in the USA in ENPO Study Abroad Conference 2016</p>
                 </div>
 
