Update Resume file

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="content" >
                 <h1 class="wow zoomIn">Welcome to <strong><span class="color">Thuc-Nhi Le </span></strong>Personal Website!</h1>
                 <h3 class="wow zoomIn" class="lead"  >Hope you have a good time exploring my website!</h3>
-                <button href="#"   class="resume wow zoomIn" >My One-page Resume</button>
+                <a href="Resume.docx"><button type="button" class="resume wow zoomIn">My One-page Resume</button> </a>
                 <h4><a href="#tf-about" class="fa fa-angle-down page-scroll wow swing"></a></h4>
             </div>
         </div>
@@ -241,9 +241,9 @@
                     <i class="fa fa-book"></i>
                     <h4 class = "wow flipInX"><strong>Teacher/Mentor</strong></h4>
                     <p style="text-align:left" class = "wow slideInUp"><strong>Teaching Assistant</strong><br/>Help to teach the piano to primary school students<br/>
-        <strong>Mentor"</strong><br/>I love honesty” of Live and Learn<br/>
-        <strong>Mentor"</strong><br/>Prepare band-7 IELTS skills for a 11-grade student<br/>
-        <strong>Mentor"</strong><br/>Give college application advice to a 12-grade student</p>
+        <strong>Mentor</strong><br/>I love honesty” of Live and Learn<br/>
+        <strong>Mentor</strong><br/>Prepare band-7 IELTS skills for a 11-grade student<br/>
+        <strong>Mentor</strong><br/>Give college application advice to a 12-grade student</p>
                 </div>
 
                 <div class="col-md-4">
@@ -405,7 +405,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                  <div class="col-sm-6 col-md-3 col-lg-3 app">
                     <div class="portfolio-item">
                         <div class="hover-bg">
@@ -550,8 +550,8 @@
                             <label for="exampleInputEmail1">Message</label>
                             <textarea class="form-control" rows="3"></textarea>
                         </div>
-                        
-                        <button href="mailto:let@lafayette.edu" type="submit" class="btn tf-btn btn-default">Submit</button>
+                        <a href="mailto:let@lafayette.edu">
+                        <button type="button" class="btn tf-btn btn-default">Submit</button> </a>
                     </form>
 
                 </div>
